// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should render as expected 1`] = `
<div>
  <div
    class="flex min-h-screen flex-col"
  >
    <ids-header
      class="z-40 bg-white print:hidden"
      type="1177"
    >
      <ids-header-avatar
        type="1177"
      >
        <a
          href="https://e-tjanster.1177.se/mvk/settings.xhtml"
          slot="avatar-left"
          target="_self"
        >
          Inställningar
        </a>
        <a
          href="/logout"
          slot="avatar-right"
        >
          Logga ut
        </a>
      </ids-header-avatar>
      <ids-header-nav
        slot="header-nav"
        type="1177"
      >
        <ids-header-nav-item
          label=""
          type="1177"
        >
          <a
            href="https://e-tjanster.1177.se/mvk/"
          >
            Start
          </a>
        </ids-header-nav-item>
        <ids-header-nav-item
          label=""
          type="1177"
        >
          <a
            href="https://e-tjanster.1177.se/mvk/messageList.xhtml"
          >
            Inkorg
          </a>
        </ids-header-nav-item>
        <ids-header-nav-item
          label=""
          type="1177"
        >
          <a
            href="https://bokadetider.1177.se/"
          >
            Bokade tider
          </a>
        </ids-header-nav-item>
        <ids-header-nav-item
          label=""
          type="1177"
        >
          <a
            href="https://journalen.1177.se/"
          >
            Journalen
          </a>
        </ids-header-nav-item>
        <ids-header-nav-item
          label=""
          type="1177"
        >
          <a
            href="https://pep.1177.se/"
          >
            Egen provhantering
          </a>
        </ids-header-nav-item>
        <ids-header-nav-item
          label=""
          type="1177"
        >
          <a
            href="https://sob.1177.se/"
          >
            Stöd och behandling
          </a>
        </ids-header-nav-item>
        <ids-header-nav-item
          label=""
          type="1177"
        >
          <a
            href="/intyg"
          >
            Intyg
          </a>
        </ids-header-nav-item>
        <ids-header-nav-item
          label=""
          type="1177"
        >
          <a
            href="https://e-tjanster.1177.se/mvk/services.xhtml?tab=3"
          >
            Övriga tjänster
          </a>
        </ids-header-nav-item>
        <ids-header-mobile-item>
          <a
            href="/installningar"
          >
            Inställningar
          </a>
        </ids-header-mobile-item>
        <ids-header-mobile-item>
          <a
            href="#"
          >
            Logga ut
          </a>
        </ids-header-mobile-item>
        <ids-header-mobile-menu
          type="1177"
        >
          Meny
          <ids-mobile-menu-item
            slot="menu-link"
          >
            <a
              href="https://e-tjanster.1177.se/mvk/"
              slot="link"
            >
              Start
            </a>
          </ids-mobile-menu-item>
          <ids-mobile-menu-item
            slot="menu-link"
          >
            <a
              href="https://e-tjanster.1177.se/mvk/messageList.xhtml"
              slot="link"
            >
              Inkorg
            </a>
          </ids-mobile-menu-item>
          <ids-mobile-menu-item
            slot="menu-link"
          >
            <a
              href="https://bokadetider.1177.se/"
              slot="link"
            >
              Bokade tider
            </a>
          </ids-mobile-menu-item>
          <ids-mobile-menu-item
            slot="menu-link"
          >
            <a
              href="https://journalen.1177.se/"
              slot="link"
            >
              Journalen
            </a>
          </ids-mobile-menu-item>
          <ids-mobile-menu-item
            slot="menu-link"
          >
            <a
              href="https://pep.1177.se/"
              slot="link"
            >
              Egen provhantering
            </a>
          </ids-mobile-menu-item>
          <ids-mobile-menu-item
            slot="menu-link"
          >
            <a
              href="https://sob.1177.se/"
              slot="link"
            >
              Stöd och behandling
            </a>
          </ids-mobile-menu-item>
          <ids-mobile-menu-item
            slot="menu-link"
          >
            <a
              href="/intyg"
              slot="link"
            >
              Intyg
            </a>
          </ids-mobile-menu-item>
          <ids-mobile-menu-item
            slot="menu-link"
          >
            <a
              href="https://e-tjanster.1177.se/mvk/services.xhtml?tab=3"
              slot="link"
            >
              Övriga tjänster
            </a>
          </ids-mobile-menu-item>
        </ids-header-mobile-menu>
      </ids-header-nav>
    </ids-header>
    <main
      class="relative flex-1"
    >
      <div
        class="ids-content m-auto max-w-7xl overflow-hidden p-5"
      >
        <div
          class="mb-5"
        >
          <ids-breadcrumbs />
        </div>
        <p>
          FooBar
        </p>
      </div>
      <div
        class="sticky bottom-0 h-16 opacity-0 transition-opacity ease-in-out"
      >
        <ids-button
          class="ids-hide ids-show-1177 absolute bottom-5 right-5 select-none"
          fab=""
          role="button"
          size="m"
          tabindex="0"
          type=""
        >
          <ids-icon-arrow
            class="ids-icon"
            size="s"
          />
        </ids-button>
      </div>
    </main>
    <ids-footer
      class="print:hidden ids-type-1177"
      cols="3"
      linkcol1="2"
      linkcol2="2"
      linkcol3="2"
      type="1177"
    />
  </div>
</div>
`;

exports[`Should render without header when user is not logged in 1`] = `
<div>
  <div
    class="flex min-h-screen flex-col"
  >
    <ids-header
      class="z-40 bg-white print:hidden"
      type="1177"
    />
    <main
      class="relative flex-1"
    >
      <div
        class="ids-content m-auto max-w-7xl overflow-hidden p-5"
      >
        <div
          class="mb-5"
        >
          <ids-breadcrumbs />
        </div>
        <p>
          FooBar
        </p>
      </div>
      <div
        class="sticky bottom-0 h-16 opacity-0 transition-opacity ease-in-out"
      >
        <ids-button
          class="ids-hide ids-show-1177 absolute bottom-5 right-5 select-none"
          fab=""
          role="button"
          size="m"
          tabindex="0"
          type=""
        >
          <ids-icon-arrow
            class="ids-icon"
            size="s"
          />
        </ids-button>
      </div>
    </main>
    <ids-footer
      class="print:hidden ids-type-1177"
      cols="3"
      linkcol1="2"
      linkcol2="2"
      linkcol3="2"
      type="1177"
    />
  </div>
</div>
`;
